# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import userRouter from "./user";
 import gaRouter from "./ga";
 import chsRouter from "./chs";
+import creativeLaborRouter from "./creativeLabor";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(userRouter);
 router.use(gaRouter);
 router.use(chsRouter);
+router.use(creativeLaborRouter);
 
 export default router;
